--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       </div>
       <div>
         <p>
-          This tool instantly converts JSON into MoonBit code. Paste a JSON structure on the left and the equivalent
+          This tool instantly converts JSON into <a href="https://www.moonbitlang.com/">MoonBit</a> code. Paste a JSON
+          structure on the left and the equivalent
           MoonBit code will be generated to the right, which you can paste into your program. The script has to make
           some assumptions, so double-check the output!
         </p>
@@ -52,7 +53,7 @@
     <tr>
       <th style="width: 45%;">JSON</th>
       <th style="width: 10%; font-size: 22px;">&#8594;</th>
-      <th style="width: 45%;">Go <label><input type="checkbox" id="inline" checked>Inline type definitions</label>
+      <th style="width: 45%;">MoonBit <label><input type="checkbox" id="inline" checked>Inline type definitions</label>
         <label><input type="checkbox" id="omitempty">omitempty</label> <span class="copy" id="copy-btn">Copy to
           clipboard</span>
       </th>
