--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <tr>
       <th style="width: 45%;">JSON</th>
       <th style="width: 10%; font-size: 22px;">&#8594;</th>
-      <th style="width: 45%;">MoonBit <label><input type="checkbox" id="inline" checked>Inline type definitions</label>
+      <th style="width: 45%;">MoonBit
         <label><input type="checkbox" id="omitempty">omitempty</label> <span class="copy" id="copy-btn">Copy to
           clipboard</span>
       </th>
