--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </script>
   <script src="resources/js/jquery.min.js"></script>
   <script src="resources/js/highlight.min.js"></script>
-  <script src="resources/js/json-to-moonbit.js"></script>
+  <script src="resources/js/json-to-moonbit-0.1.0.js"></script>
   <script src="resources/js/common.js"></script>
   <link rel="stylesheet" href="resources/css/tomorrow.highlight.css">
   <link rel="stylesheet" href="resources/css/common.css">
@@ -71,6 +71,7 @@
   </table>
 
   <footer>
+    Version 0.1.0 —
     &copy; 2015 Matt Holt
     and
     &copy; 2024 Glenn Lewis
